--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,56 +10,8 @@
         var next_page = <%= @page+1 %>
         var max_page_num  = <%= @book.max_page_num %>
 </script>
-<script type="text/javascript">
-  var server_page_num = page_num;
-  function post_it(){
-    //console.log("post_it start");
-    if (page_num > max_page_num-1)
-      page_num = max_page_num-1;
-    $.post("/print/", {
-current_page:page_num+1
-},
-function(data) {
-//console.log("data: "+data);
-alert(data);
-});
-}
-function post_it_back(){
-  //console.log(page_num);
-  if ( page_num -1 == 0)
-    page_num = 2;
-  $.post("/print/", {
-current_page:page_num-1
-},
-function(data) {
-//console.log(page_num)
-//location.href="/reader/{{book_id}}/"+page_num.toString(10);
-});
-}
-function get_it() {
-  $.get("/print/", function(data){
-      //console.log("get_It data: " + data);
-      server_page_num = data.page_num;
-      //console.log("server_page_num "+server_page_num);
-      });
-}
-function startTimer(){
-  get_it();
-  if ( server_page_num != undefined && server_page_num == page_num)
-  {
-    setTimeout("startTimer()", 1000);
-    //console.log("cmp: "+page_num);
-  }
-  else
-  {
-    location.href="/reader/{{book_id}}/"+server_page_num;
-    //console.log("jump to "+ server_page_num);
-  }
-}
-
-</script>
   </head>
-  <body onload="SetArray(100);init2();startTimer();onLoadEvent()" >
+  <body onload="SetArray(100);init2();onLoadEvent()" >
 
     <!--rolling comments-->
     <div class="whole" id="wholeId" onmouseover="stop()" onmouseout="goon()">
