--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -1,39 +1,44 @@
-.login
-{
-  position:absolute;
-  left:500px;
-  top:200px; 
-}
-
-.regist
-{
-  position:absolute;
-  left:595px;
-  top:270px;
-}
-
-.forget_pas
-{
-  position:absolute;
-  top:240px;
-  left:680px;
-  height:18px;
-}
-
-.logo
-{
-  position:absolute;
-  left:530px;
-  top:160px;
-}
 .input
 {
   height:30px;
-  width:180px;
+  width:200px;
   border:0px;
   font-size:22px;
   -moz-border-radius:10px;
   border-radius:10px;
+}
+
+.article
+{
+  font-family:微软雅黑;
+  font-size:15px;
+}
+
+.logo
+{
+  margin-left:50px;
+}
+
+.login
+{
+  display:inline;
+}
+
+.whole
+{
+  margin-top:200px;
+  margin-left:400px;
+}
+
+.forget
+{
+  color: #C2C2C2;
+  font-weight: bold;
+  font-size: 18px;
+  text-decoration: none;
+  position:relative;
+  left:5px;
+  top:-30px;
 }
 
 body
@@ -43,17 +48,75 @@ body
 
 .username
 {
-  position:absolute;
+  margin-top:1px;
 }
 
 .password
 {
-  position:absolute;
-  top:35px;
+  margin-top:5px;
+  display:block;
 }
 
-.submit
-{
-  position:absolute;
-  top:70px;
+.button {
+  position: relative;
+  display: inline-block;
+
+  min-width: 90px;
+  padding: 10px 0px;
+  margin: 0px 2px;
+  background:#F3F3F3;
+
+  color: #C2C2C2;
+  font-weight: bold;
+  font-size: 18px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 1;
+  text-shadow: 0px -1px 0px rgba(228,228,228,0.5);
+
+  border: 1px solid;
+  border-color:#E4E4E4;
+  border-radius: 8px;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+
+  -webkit-box-shadow: inset 0px -4px 5px rgba(228,228,228,0.2),
+  inset 0px 1px 5px rgba(228,228,228,0.2),
+  /**/
+  0px 2px 0px #C2C2C2,
+  0px 4px 0px #C2C2C2,
+  0px 6px 0px #C2C2C2,
+  /**/
+  0px 5px 5px rgba(228,228,228,0.5);
+}
+
+.button:hover {
+  background-color: #8AC5FD;
+
+  background-image: -webkit-gradient(
+  linear,
+  left top,
+  left bottom,
+  color-stop(0, #FFFFFF),
+  color-stop(0.49, #E1E1E1),
+  color-stop(0.5, #E4E4E4),
+  color-stop(1, #C2C2C2)
+  );
+}
+
+.button:active {
+  top: 4px;
+  box-shadow: 		inset 0px 4px 5px rgba(255,255,255,0.4),
+  inset 0px -1px 5px rgba(255,255,255,0.2),
+  /**/
+  0px 2px 0px #1e4766,
+  /**/
+  0px 4px 5px rgba(0,0,0,0.5);
+
+  -webkit-box-shadow: inset 0px 4px 5px rgba(255,255,255,0.4),
+  inset 0px -1px 5px rgba(255,255,255,0.2),
+  /**/
+  0px 2px 0px #1e4766,
+  /**/
+  0px 4px 5px rgba(0,0,0,0.5);
 }
