working on websocket

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin#index</h1>
-<p>Find me in app/views/admin/index.html.erb</p>
+<html>
+  <head>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
+    <script>
+      $(document).ready(function(){
+          function debug(str){ $("#debug").append("<p>"+str+"</p>"); };
+
+          ws = new WebSocket("ws://127.0.0.1:8080");
+          ws.onmessage = function(evt) { $("#msg").append("<p>"+evt.data+"</p>"); };
+          ws.onclose = function() { debug("socket closed"); };
+          ws.onopen = function() {
+          debug("connected...");
+          ws.send("hello server");
+          };
+          $('#message').change(function(){
+            ws.send(this.value);
+            this.value = '';
+            });
+          });
+</script>
+  </head>
+  <body>
+    <div id="debug"></div>
+    <div id="msg"></div>
+    <input id="message" type="text" />
+  </body>
+</html>
