add profile page

--- a/app/views/reader/index.html.erb
+++ b/app/views/reader/index.html.erb
@@ -36,7 +36,7 @@
         <div class="right_part"> 
             <img src="/images/index/logo.png" class="logo" height="50"/>
             <div class="user">
-                <a href="/personal">
+                <a href="/profile">
                     <img src="/images/index/user.png" class="user_image"/>
                 </a>
                 <nav class="user_name">
