--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,7 +15,7 @@
 
             <!--logo part-->
             <div class="show_logo">
-                <a href="/index"><img src="/images/logo.png" title="MidaReader"/></a>
+                <a href="/"><img src="/images/logo.png" title="MidaReader"/></a>
             </div>
             <!--left_button part-->
             <img src="/images/comment_close.png" id="grey_tag" />
