--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,6 +31,16 @@
         </div>
 
         <div>
+            <article class="article">Tag:</article>
+            <%= f.text_field :tag, :size => 40 , :class => "input username"%>
+        </div>
+        <div>
+            <article class="article">Current_page:</article>
+            <%= f.text_field :current_page, :size => 40 , :class => "input username"%>
+        </div>
+
+
+        <div>
             <%= f.submit :class => "button"%>
         </div>
 
