--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,16 @@
   <%= @user.salt %>
 </p>
 
+<p>
+  <b>Tag:</b>
+  <%= @user.tag %>
+</p>
+
+<p>
+  <b>Current page:</b>
+  <%= @user.current_page %>
+</p>
+
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
